<resources>
    <string name="app_name">HR Cap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_leave">Leave Request</string>
    <string name="menu_loan">Loan/Advance Salary</string>
    <string name="menu_selfattandance">Self Attendance</string>
    <string name="menu_attdancereg">Entry</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_chengepassword">Change Password</string>
    <string name="menu_holiday">Holiday</string>
    <string name="menu_leavebalance">Leave Balance</string>
    <string name="menu_syncdata">Sync Data</string>
    <string name="sync_data">Sync Data</string>
    <string name="menu_leavesummary">Leave Summary</string>
    <string name="draft">Save As Draft</string>
    <string name="menu_selfattandance_summary">Self Attendance Summary</string>
    <string name="menu_attdanceregsummary">Summary</string>
    <string name="menu_leavedraft">Leave Request Draft</string>
    <string name="menu_atdregaprsummary">Approval Summary</string>
    <string name="menu_leaveaprsummary">Leave Approval Summary</string>
    <string name="menu_regentrydraft">Regularization Entry Draft</string>
    <string name="menu_checkAttendance">My Attendance</string>



    <string name="my_string">Attendance Regularization Approval \n Summary</string>
    <string name="menu_leaveDraft">Leave Draft</string>
    <string name="menu_RegDraft">Regularization Draft</string>
    <string-array name="Reason">
        <item>Meeting</item>
        <item>Client Visit</item>
        <item>Billing</item>
        <item>Others</item>
    </string-array>
</resources>