<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
<item android:title="Self Service">
<menu>
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_selfattandance"
            android:title="@string/menu_selfattandance" />

    <item
        android:id="@+id/nav_selfattandancesummary"
        android:title="@string/menu_selfattandance_summary" />



        <item
            android:id="@+id/nav_attadancereg"
            android:title="@string/menu_attdancereg" />

    <item
        android:id="@+id/nav_attadanceregsummary"
        android:title="@string/menu_attdanceregsummary" />


    <item
        android:id="@+id/nav_atdregaprsummary"
        android:title="@string/menu_atdregaprsummary" />

        <item
            android:id="@+id/nav_leave"
            android:title="@string/menu_leave" />


    <item
        android:id="@+id/nav_leavedraft"
        android:title="@string/menu_leavedraft" />

        <item
            android:id="@+id/nav_loan"
            android:title="@string/menu_loan" />

    <item
        android:id="@+id/nav_holiday"
        android:title="@string/menu_holiday" />
    <item
        android:id="@+id/nav_leavebalance"
        android:title="@string/menu_leavebalance" />

    <item
        android:id="@+id/nav_leavesummary"
        android:title="@string/menu_leavesummary" />



    <item
        android:id="@+id/nav_leaveaprsummary"
        android:title="@string/menu_leaveaprsummary" />


    <item
        android:id="@+id/nav_regentrydraft"
        android:title="@string/menu_regentrydraft" />


</menu>
</item>


    <item android:title="Others">
<menu>

    <item
        android:id="@+id/nav_chengepassword"
        android:title="@string/menu_chengepassword" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
</menu>
    </item>

</menu>